syntax = "proto3";

package cron_client;

option go_package = "./v1;v1";

import "validate/validate.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "cron_client_task.proto";

// 应用服务服务接口定义，渠道主要是配置用户登录时的可选登录方法
service Service{
  rpc Healthy(google.protobuf.Empty) returns(google.protobuf.Empty);
  rpc ExecTask(ExecTaskRequest) returns(stream ExecTaskReply);
  rpc CancelExecTask(CancelExecTaskRequest) returns(google.protobuf.Empty);
}